[package]
name = "my_first_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
sha2 = "0.10.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.5"
libp2p = { version = "0.53.2" }
libp2p-dns = { version = "0.41.1", optional = true }
secp256k1 = { version = "0.28.1", features = ["rand", "recovery"] }
sha3 = "0.10.8"